--- a/Portfolio_Opt_.ipynb
+++ b/Portfolio_Opt_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJHDz7tWDhO5caXgaYiBS8",
+      "authorship_tag": "ABX9TyOvz82i50r/QuDzpQSPmZ7x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0a3u-RIbaCY0",
-        "outputId": "0f0ba4ab-a358-4a60-b8c9-f56a0e724ba6"
+        "outputId": "42d08bf3-fb17-40df-b9fd-bd86f8b023e9"
       },
       "outputs": [
         {
@@ -65,7 +65,7 @@
         }
       ],
       "source": [
-        "# Get from information from yahoo finance\n",
+        "# Geting some information from yahoo finance\n",
         "!pip install yfinance"
       ]
     },
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "y-d6Xc4La6Wi"
       },
-      "execution_count": 47,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
       "metadata": {
         "id": "RKVxkdSOlyAM"
       },
-      "execution_count": 30,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -122,9 +122,9 @@
           "height": 1000
         },
         "id": "SccL_LJLdv8R",
-        "outputId": "fe1f179b-112c-4fea-da50-6b583342a62f"
+        "outputId": "842df453-8ee8-4675-db5e-3c43c8b869b9"
       },
-      "execution_count": 52,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-dc90f06b-a446-42bb-bbe9-36327a8f0b29\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-208b339e-8924-4b40-b510-8a569465e0fc\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -859,7 +859,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dc90f06b-a446-42bb-bbe9-36327a8f0b29')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-208b339e-8924-4b40-b510-8a569465e0fc')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -911,12 +911,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-dc90f06b-a446-42bb-bbe9-36327a8f0b29 button.colab-df-convert');\n",
+              "        document.querySelector('#df-208b339e-8924-4b40-b510-8a569465e0fc button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-dc90f06b-a446-42bb-bbe9-36327a8f0b29');\n",
+              "        const element = document.querySelector('#df-208b339e-8924-4b40-b510-8a569465e0fc');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -936,8 +936,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b3cfcdd6-e42e-414c-a3e3-a3de8d4ecd22\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b3cfcdd6-e42e-414c-a3e3-a3de8d4ecd22')\"\n",
+              "<div id=\"df-cc257445-665f-4333-9aaa-174c8055c3b3\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cc257445-665f-4333-9aaa-174c8055c3b3')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1056,7 +1056,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b3cfcdd6-e42e-414c-a3e3-a3de8d4ecd22 button');\n",
+              "        document.querySelector('#df-cc257445-665f-4333-9aaa-174c8055c3b3 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1067,7 +1067,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 58
         }
       ]
     },
@@ -1082,9 +1082,9 @@
           "height": 802
         },
         "id": "BZPZg8DQonSc",
-        "outputId": "bafe39ec-5cf4-43c2-a3bd-cfeb53eb1b23"
+        "outputId": "d4bfbb91-af6f-4e76-8e08-c5a8165aa2b8"
       },
-      "execution_count": 36,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1144,7 +1144,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d15bbcf7-7563-40bc-bc22-bdfb0f420b70\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-93eeba87-2f4f-4875-b92c-fa048ac6ce34\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1490,7 +1490,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d15bbcf7-7563-40bc-bc22-bdfb0f420b70')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-93eeba87-2f4f-4875-b92c-fa048ac6ce34')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1542,12 +1542,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d15bbcf7-7563-40bc-bc22-bdfb0f420b70 button.colab-df-convert');\n",
+              "        document.querySelector('#df-93eeba87-2f4f-4875-b92c-fa048ac6ce34 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d15bbcf7-7563-40bc-bc22-bdfb0f420b70');\n",
+              "        const element = document.querySelector('#df-93eeba87-2f4f-4875-b92c-fa048ac6ce34');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1567,8 +1567,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-445bbb96-f279-452f-8f99-e9acaa9c85de\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-445bbb96-f279-452f-8f99-e9acaa9c85de')\"\n",
+              "<div id=\"df-253a606e-1a5d-473a-a2da-e7eb8b127ee4\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-253a606e-1a5d-473a-a2da-e7eb8b127ee4')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1687,7 +1687,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-445bbb96-f279-452f-8f99-e9acaa9c85de button');\n",
+              "        document.querySelector('#df-253a606e-1a5d-473a-a2da-e7eb8b127ee4 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1698,7 +1698,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 59
         }
       ]
     }
