--- a/Portfolio_Opt_.ipynb
+++ b/Portfolio_Opt_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvz82i50r/QuDzpQSPmZ7x",
+      "authorship_tag": "ABX9TyN/voDmd7aiu1JyX+tUolVY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "source": [
+        "# Description: The goal of this project is to optimize a porfolio using the Efficient Frontier\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "yHiUUsofw0vZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0a3u-RIbaCY0",
-        "outputId": "42d08bf3-fb17-40df-b9fd-bd86f8b023e9"
+        "outputId": "35657697-20d4-494b-ba48-5f9534589fd8"
       },
       "outputs": [
         {
@@ -73,8 +86,7 @@
       "cell_type": "code",
       "source": [
         "# Importing python Libraries\n",
-        "import yfinance as yf\n",
-        "from pandas_datareader import data as web\n",
+        "#import yfinance as yf\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "from datetime import datetime"
@@ -82,7 +94,7 @@
       "metadata": {
         "id": "y-d6Xc4La6Wi"
       },
-      "execution_count": 55,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -106,13 +118,13 @@
       "metadata": {
         "id": "RKVxkdSOlyAM"
       },
-      "execution_count": 57,
+      "execution_count": 66,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#import yfinance as yf\n",
+        "# Getting required data from yahoo finance\n",
         "df = yf.download(tickers, period=\"1mo\")\n",
         "df"
       ],
@@ -122,9 +134,9 @@
           "height": 1000
         },
         "id": "SccL_LJLdv8R",
-        "outputId": "842df453-8ee8-4675-db5e-3c43c8b869b9"
+        "outputId": "2cdb2260-651e-463c-9b8c-d5fc810d4436"
       },
-      "execution_count": 58,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +257,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-208b339e-8924-4b40-b510-8a569465e0fc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-91a643be-d4fa-4986-94fd-e4cde47ae01e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -859,7 +871,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-208b339e-8924-4b40-b510-8a569465e0fc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-91a643be-d4fa-4986-94fd-e4cde47ae01e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -911,12 +923,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-208b339e-8924-4b40-b510-8a569465e0fc button.colab-df-convert');\n",
+              "        document.querySelector('#df-91a643be-d4fa-4986-94fd-e4cde47ae01e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-208b339e-8924-4b40-b510-8a569465e0fc');\n",
+              "        const element = document.querySelector('#df-91a643be-d4fa-4986-94fd-e4cde47ae01e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -936,8 +948,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-cc257445-665f-4333-9aaa-174c8055c3b3\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cc257445-665f-4333-9aaa-174c8055c3b3')\"\n",
+              "<div id=\"df-897ed4f8-cd73-42d0-b2bf-1081c668671b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-897ed4f8-cd73-42d0-b2bf-1081c668671b')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1056,7 +1068,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-cc257445-665f-4333-9aaa-174c8055c3b3 button');\n",
+              "        document.querySelector('#df-897ed4f8-cd73-42d0-b2bf-1081c668671b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1067,7 +1079,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 67
         }
       ]
     },
@@ -1082,9 +1094,9 @@
           "height": 802
         },
         "id": "BZPZg8DQonSc",
-        "outputId": "d4bfbb91-af6f-4e76-8e08-c5a8165aa2b8"
+        "outputId": "f3f3760e-2a90-4e98-e295-431c054edd1f"
       },
-      "execution_count": 59,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1144,7 +1156,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-93eeba87-2f4f-4875-b92c-fa048ac6ce34\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a2933830-a831-4f37-895e-2da03f669b56\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1490,7 +1502,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-93eeba87-2f4f-4875-b92c-fa048ac6ce34')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a2933830-a831-4f37-895e-2da03f669b56')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1542,12 +1554,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-93eeba87-2f4f-4875-b92c-fa048ac6ce34 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a2933830-a831-4f37-895e-2da03f669b56 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-93eeba87-2f4f-4875-b92c-fa048ac6ce34');\n",
+              "        const element = document.querySelector('#df-a2933830-a831-4f37-895e-2da03f669b56');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1567,8 +1579,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-253a606e-1a5d-473a-a2da-e7eb8b127ee4\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-253a606e-1a5d-473a-a2da-e7eb8b127ee4')\"\n",
+              "<div id=\"df-5b8fbf44-b64d-4037-ab33-b0a52c963afb\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5b8fbf44-b64d-4037-ab33-b0a52c963afb')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1687,7 +1699,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-253a606e-1a5d-473a-a2da-e7eb8b127ee4 button');\n",
+              "        document.querySelector('#df-5b8fbf44-b64d-4037-ab33-b0a52c963afb button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1698,7 +1710,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 68
         }
       ]
     }
