--- a/Portfolio_Opt_.ipynb
+++ b/Portfolio_Opt_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/voDmd7aiu1JyX+tUolVY",
+      "authorship_tag": "ABX9TyPszjAw/NwL4xnZ25Ql4XRi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Description: The goal of this project is to optimize a porfolio using the Efficient Frontier\n",
-        "\n",
-        ""
+        "# Description: The goal of this project is to optimize a porfolio using Efficient Frontier\n"
       ],
       "metadata": {
         "id": "yHiUUsofw0vZ"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": []
     },
     {
