--- a/Portfolio_Opt_.ipynb
+++ b/Portfolio_Opt_.ipynb
@@ -47,9 +47,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Import & Install Libraries"
+      ],
+      "metadata": {
+        "id": "OnHq00SH2LoJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Importing python Libraries\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -58,9 +66,9 @@
         "plt.style.use('_classic_test_patch')"
       ],
       "metadata": {
-        "id": "y-d6Xc4La6Wi"
+        "id": "glNP9SfL18Cy"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
