--- a/Portfolio_Opt_.ipynb
+++ b/Portfolio_Opt_.ipynb
@@ -72,9 +72,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Data Collection:  Accessed yahoo finance API for historical stock data"
+      ],
+      "metadata": {
+        "id": "gSkChozt3NxR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Getting required data from yahoo finance\n",
         "\n",
         "tickers = (\"BA,CMT,CMCSA,CRM,CVX\")\n",
         "\n",
