--- a/Portfolio_Opt_.ipynb
+++ b/Portfolio_Opt_.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## The goal of this project is to optimize a porfolio of stocks using Efficient Frontier"
+        "### The goal of this project is to optimize a porfolio of stocks using Efficient Frontier"
       ],
       "metadata": {
         "id": "5c1BeT7hzyl0"
