--- a/Portfolio_Opt_.ipynb
+++ b/Portfolio_Opt_.ipynb
@@ -82,9 +82,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "portfolio_tickers = [\"BRK-B\",\"CRM\",\"PFE\",\"BA\",\"AMT\"]\n",
+        "\n",
+        "historical_data = yf.download(portfolio_tickers, period= '3y')[\"Adj Close\"]\n",
+        "\n",
+        "historical_data\n",
+        "\n",
+        "historical_data.to_csv(\"historical_data.csv\")\n",
+        "\n",
+        "print(\"historical_data.csv\")"
+      ],
       "metadata": {
-        "id": "caxDyTEA7s9F"
+        "id": "QhMZ7J8UKQ-z",
+        "outputId": "00507b3d-f1b5-452d-af54-d6525305c05e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[*********************100%%**********************]  5 of 5 completed\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "historical_data.csv\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "historical_data = pd.read_csv(\"historical_data.csv\")\n",
+        "display(historical_data)"
+      ],
+      "metadata": {
+        "id": "uMNOW5FBX-Hc"
       },
       "execution_count": null,
       "outputs": []
